--- a/playground/elk/docker-compose.base.yaml
+++ b/playground/elk/docker-compose.base.yaml
@@ -27,53 +27,10 @@ services:
       - cluster.routing.allocation.disk.threshold_enabled=false
       - discovery.type=single-node
       - ES_JAVA_OPTS=-XX:UseAVX=2 -Xms1g -Xmx1g
-    ulimits:
-      memlock:
-        hard: -1
-        soft: -1
     healthcheck:
-      interval: 20s
-      retries: 10
-      test: curl -s http://localhost:9200/_cluster/health | grep -vq '"status":"red"'
-
-
-  # to enable EFK, check below example
-  # fluentd:
-  #   container_name: fluentd
-  #   extends:
-  #     file:   ./docker-compose.base.yml
-  #     service: fluentd
-  #   depends_on:
-  #     - elasticsearch
-  fluentd:
-    build:
-      context: ./fluentd
-    volumes:
-      - ./fluentd/conf:/fluentd/etc
-    ports:
-      - 127.0.0.1:127.0.0.1:24224:24224
-      - 127.0.0.1:127.0.0.1:24224:24224/udp
-
-  # to enable EFK, check below example
-  # kibana:
-  #   container_name: bts.kibana
-  #   extends:
-  #     file:   ./docker-compose.base.yml
-  #     service: kibana
-  #   depends_on:
-  #     - elasticsearch
-  kibana:
-    image: docker.elastic.co/kibana/kibana:7.7.0
-    environment:
-      SERVER_HOST: 0.0.0.0
-      ELASTICSEARCH_URL: http://elasticsearch:9200
-      ELASTICSEARCH_HOSTS: http://elasticsearch:9200
-    ports:
-      - 127.0.0.1:5601:5601
-    healthcheck:
-      interval: 10s
-      retries: 20
-      test: curl --write-out 'HTTP %{http_code}' --fail --silent --output /dev/null http://localhost:5601/api/status
+      interval: 30s
+      retries: 5
+      test: curl --write-out 'HTTP %{http_code}' --fail --silent --output /dev/null http://localhost:9200/
 
   # to enable Elastic APM, check below example
   # apm-server:
@@ -101,4 +58,3 @@ services:
       interval: 10s
       retries: 12
       test: curl --write-out 'HTTP %{http_code}' --fail --silent --output /dev/null http://localhost:8200/
-
